# reprint

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
samples/: sample.epub
src/: pdf-to-epub.ipynb
src/reprint/azure/: client.py  converters.py
src/reprint/core/: models.py  processing.py
src/reprint/epub/: builder.py  styles.py
src/reprint/utils/: geometry.py  text.py
