[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reprint"
version = "0.1.0"
authors = [
    { name="Joonas Nissinen" },
]
description = "Convert PDFs to EPUBs using Azure Document Intelligence"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jnissin/reprint"
"Bug Tracker" = "https://github.com/jnissin/reprint/issues"

[tool.setuptools.packages.find]
where = ["src"]